Fix Footer component position, vertiacal center, readability

--- a/src/Stylesheets/footer.css
+++ b/src/Stylesheets/footer.css
@@ -1,5 +1,5 @@
 /* footer part */
-.footer {
+.app-footer {
     background: var(--color-bg-footer);
     height: auto;
 }
