--- a/src/Stylesheets/main.css
+++ b/src/Stylesheets/main.css
@@ -86,4 +86,14 @@ blockquote:before, blockquote:after, q:before, q:after {
     padding-right: 15px;
 }
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
 
+.app-body {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+}
